--- a/index.html
+++ b/index.html
@@ -60,3 +60,7 @@
    <button class="buttons reset">reset</button>
  </div>
   </section>
+
+  <script src="converter.js"></script>
+</body>
+</html>
