--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <div class="flip1">
         <div class= "celsius">&#186Celsius</div>
         <div class= "fahrenheit">&#186Fahrenheit</div>
-        <input type= "number" class= "celsius_label" value = "0.0" disabled>
-        <input type= "number" class= "fahr fahrenheit_label" value = "0.0" disabled>
+        <input type= "number" class= "celsius_label" placeholder = "0.0" disabled>
+        <input type= "number" class= "fahr fahrenheit_label" placeholder = "0.0" disabled>
     </div>
 
     <div class = "flip2" style = "display: none;">    
         <div class="celsius">&#186Fahrenheit</div>
         <div class="fahr1 fahrenheit">&#186Celsius</div>
-        <input type="number" class="celsius_label" id = "celsius_label2" value = "0.0" disabled>
-        <input type= "number" class= "fahr2 fahrenheit_label" id = "fahrenheit_label2" value = "0.0" disabled>
+        <input type="number" class="celsius_label" id = "celsius_label2" placeholder = "0.0" disabled>
+        <input type= "number" class= "fahr2 fahrenheit_label" id = "fahrenheit_label2" placeholder = "0.0" disabled>
     </div>
 
     </fieldset>
@@ -89,7 +89,7 @@
         </select>
 
         <div class= "from_input">
-        <input type= "number" class= "input-labels from-input" value = "0">
+        <input type= "number" class= "input-labels from-input">
         </div>
         <h1 class = "units from-units">--</h1>
     </form> 
@@ -112,7 +112,7 @@
         </select>
         
         <div class= "to_output">
-        <input type= "number" class= "input-labels to-output" value = "0" disabled>
+        <input type= "number" class= "input-labels to-output" disabled>
          <h1 class = "units to-units">--</h1>
         </div>
     </form>
